# Area-Selector

./: .gitignore  README.md  pyproject.toml  requirements.txt
example_data/: example_detections.csv  example_points.csv
run/: quality_of_results_comparison.py  run_area_selector.py  run_individual_algs.py
src/convex_area_selector/: convex_polygon_finder.py
src/convex_area_selector/exact/: exact.py
src/convex_area_selector/heuristic/: analyse_patches.py  heuristic.py
src/convex_area_selector/utils/: utils.py
thesis/: __init__.py
